# KumDB

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
backends/: csv.py  json.py  msgpack.py
include/: error.h  index.h  internal.h  kumdb.h  lock.h  query.h  record.h  storage.h  table.h  types.h
kumdb/: __init__.py  core.py  exceptions.py  types.py
kumdb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: error.c  index.c  kumdb.c  lock.c  query.c  record.c  storage.c  table.c  types.c
tests/: test_core.c  test_query.c  test_storage.c  test_types.c
tools/: bench.c  dump.c  kumdb_cli.c
utilities/: crypto.py  validation.py
